# douyin-skills

./: .gitignore  README.md  SKILL.md  pyproject.toml
scripts/: chrome_launcher.py  cli.py
scripts/douyin/: __init__.py  cdp.py  feeds.py  interact.py  login.py  publish.py  search.py  selectors.py  urls.py
skills/dy-auth/: SKILL.md
skills/dy-explore/: SKILL.md
skills/dy-interact/: SKILL.md
skills/dy-moviegen-v2/: SKILL.md  main.py  requirements.txt
skills/dy-moviegen-v2/references/: asset-prompts.md  character-design-template.md  examples.md  image-prompt-generator.md  platform-specs.md  script-creation-workflow.md  spontaneous-shopping-video-workflow.md  story-to-execution.md
skills/dy-moviegen-v2/scripts/: generate_vlog_prompt.py  grok_api.py  jianying_worker.py  jianying_worker_impl.py  nano_banana_api.py  prompt_compiler.py  sora2_api.py  unified_workflow.py  video_assembler.py
skills/dy-publish/: SKILL.md
skills/manjv/: SKILL.md  main.py
skills/manjv/references/: art-direction-workflow.md  assembly-workflow.md  assets-generation-workflow.md  motion-workflow.md  script-analysis-workflow.md  storyboard-workflow.md
skills/manjv/scripts/: grok_api.py  nanobanana_api.py  video_assembler.py  workflow.py
